befor admin panel

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -90,7 +90,7 @@ h6 {
 /* PHP Email Form Messages
 ------------------------------*/
 .php-email-form .error-message {
-  display: none;
+  /* display: none; */
   background: #df1529;
   color: #ffffff;
   text-align: left;
