--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,14 +1,14 @@
 /**
-* Template Name: Selecao
-* Template URL: https://bootstrapmade.com/selecao-bootstrap-template/
-* Updated: Aug 07 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
+* Template Name: 
+* Template URL: 
+* Updated: May 20 with Bootstrap v5.3.3
+* Author: Dinesh Yogi
+* License: 
 */
 
 /*--------------------------------------------------------------
 # Font & Color Variables
-# Help: https://bootstrapmade.com/color-system/
+# Help: 
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
