--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 body {
     /* min-height: 100vh; */
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     
     margin: 0;
+    padding: 0;
     /* overflow: hidden; */
+}
+
+table h1, table h2, table h3, table h4, table h5, table h6, table p, table span{
+    margin: 0;
+    padding: 0;
 }
 
 .sidebar ::-webkit-scrollbar {
@@ -34,12 +40,39 @@ body {
     /* background: #0000001d; */
 }
 
+/* Common CSS  */
+.light-btn{
+    background-color: #fff;
+    border: 1px solid rgb(240 245 249 / var(--tw-bg-opacity, 1)) !important;
+}
 
+.light-btn:hover{
+    background-color: rgb(240 245 249 / var(--tw-bg-opacity, 1));
+    transition: 0.3s all;
+}
 
+.admin-main-btn{
+    padding: 7px 20px;
+    background-color: #0f75bb;
+    color: #fff;
+    border-radius: 20px;
+    font-weight: 600;
+}
+.admin-main-btn:hover{
+    background-color: #f0f5f9;
+    color: #000;
+    /* border: #0f75bb 1px solid; */
+}
 
 .admin-radius{
     border-radius: 20px;
 }
+
+.centent-align-center th , .centent-align-center td {
+    vertical-align: middle;
+}
+
+/* Common CSS End  */
 
 
 .admin-dashboard {
@@ -122,9 +155,10 @@ body {
     outline: none;
     border:none;
     transition: all 0.5s ease-in;
+    margin-bottom: 5px;
 }
 
-.admin-dashboard li.nav-item :hover {
+.admin-dashboard li.nav-item a.active, .admin-dashboard li.nav-item :hover{
     color: #5858f3;
     background-color: rgb(240 245 249 / var(--tw-bg-opacity, 1));
     border-radius: 10px;
@@ -138,7 +172,7 @@ body {
 }
 
 .admin-dashboard .sidebar .nav-link{
-    padding: 10px 10px;
+    padding: 7px 10px;
 }
 
 .admin-dashboard .sidebar .nav-link svg{
@@ -156,14 +190,75 @@ body {
     height: 100vh;
     overflow-y: auto;
     scroll-behavior: smooth;
-    padding: 0 20px;
+    padding: 0 20px 30px 20px;
 }
 
-#admin-content-area .content-area {
+#admin-content-area .content-bg-area {
     margin-top: 20px;
     background-color: #fff;
     padding: 20px;
+    border-radius: 20px;
 }
 
 
 /* Ending Content Area */
+
+
+/* Login page  */
+
+.Login-page {
+    background: rgb(240 245 249 / var(--tw-bg-opacity, 1));
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Login-form{
+    padding: 30px 20px 20px 20px !important;
+    background-color: #fff;
+    max-height: 625px;
+    overflow: hidden;
+}
+
+.login-header {
+    text-align: center;
+}
+
+.login-header-image{
+    max-width: 150px;
+    /* border-radius: 50%; */
+}
+
+.Login-form input{
+    border-bottom: 1px solid rgb(240 245 249 / var(--tw-bg-opacity, 1)) !important;
+    border: none;
+    /* padding: 10px; */
+}
+
+input[type="password"]:focus{
+    border:none;
+    outline:none;
+}
+
+.form-control:focus {
+    border-color: #28a74614;
+    box-shadow: 0 0 0 0.1px rgba(40, 167, 69, 0.25);
+}
+
+.form-text-error{
+    margin: 0px 0 0 12px;
+}
+
+
+/* Admin Manage Navigation  */
+.ManageNavigation .navigation-Form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+
+
